refactored fetch function, now using async,await and try / catch blocks

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     const img = document.querySelector("img");
     const searchbar = document.getElementById("searchbar");
     const submitButton = document.querySelector(".submit-btn");
+    /*
     // fetches data from the server
     function fetchGif(e){
       e.preventDefault();
@@ -43,8 +44,28 @@
       console.log(error.message);
     });
   }
+*/
 
-  submitButton.addEventListener("click", fetchGif);
+//using async, await and try / catch blocks
+  async function refactoredFetchGif(e){
+
+    e.preventDefault();
+    const searchbarValue = searchbar.value;
+
+    try{
+    const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=EU9OoZWq5w5Yro8zeus7nErn73FU6HoO&s=${searchbarValue}`, {mode: "cors"})
+    if(!response.ok){
+      throw new Error("Network error");
+    }
+    const responseData = await response.json();
+      img.src = responseData.data.images.original.url;
+    }
+    catch(error){
+      console.log(error.message);
+    }
+  }
+
+  submitButton.addEventListener("click", refactoredFetchGif);
 
 
   </script>
